fix: align taxonomy card to flex-start
Close [BUG] Some problem... #813

--- a/assets/css/_partial/_archive/_terms.scss
+++ b/assets/css/_partial/_archive/_terms.scss
@@ -2,7 +2,7 @@
   margin: 0 auto;
   margin-top: 3rem;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-between;
   flex-direction: row;
   flex-wrap: wrap;
